--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       color: #daa520;
     }
     .card {
-      border: 1px solid #007bff;
+      border: 1px solid #daa520;
     }
     .card-title {
       color: #daa520;
