--- a/index.html
+++ b/index.html
@@ -1,192 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>925 Pratas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f8f9fa;
-      color: #343a40;
-    }
-    .navbar {
-      background-color: #d9e0e3;
-    }
-    .navbar-brand, .nav-link, .btn {
-      color: #daa520;
-    }
-    .card {
-      border: 1px solid #daa520;
-    }
-    .card-title {
-      color: #daa520;
-    }
-    .modal-header, .modal-footer {
-      background-color: #d9e0e3;
-      color: #daa520;
-    }
-  </style>
+  <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">925 Pratas</a>
-    <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-    <button class="btn btn-outline-light ms-2" onclick="viewCart()">Carrinho</button>
-  </div>
-</nav>
-
-<!-- Produtos -->
-<div class="container my-4">
-  <h2 class="text-center text-warning">Produtos Disponíveis</h2>
-  <div class="row" id="productList">
-    <!-- Produtos gerados pelo JavaScript -->
-  </div>
-</div>
-
-<!-- Modal de Login -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Login</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form id="loginForm">
-          <div class="mb-3">
-            <label for="username" class="form-label">Usuário</label>
-            <input type="text" class="form-control" id="username" required>
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="password" required>
-          </div>
-          <button type="button" class="btn btn-secondary" style="background-color: #d9e0e3;" onclick="authenticate()">Entrar</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal do Carrinho -->
-<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="cartModalLabel">Carrinho de Compras</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body" id="cartContent">
-        <!-- Conteúdo do carrinho gerado pelo JavaScript -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-        <button type="button" class="btn btn-secondary" style="background-color: #d9e0e3;" onclick="checkout()">Finalizar Compra</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  const products = [
-  { id: 1, name: "Produto A", price: 19.99, description: "Descrição do produto A", image: "img001.jpg" },
-  { id: 2, name: "Produto B", price: 29.99, description: "Descrição do produto B", image: "img002.png" },
-  { id: 3, name: "Produto C", price: 39.99, description: "Descrição do produto C", image: "img002.png" },
-  { id: 4, name: "Produto D", price: 49.99, description: "Descrição do produto D", image: "img003.png" },
-  { id: 5, name: "Produto E", price: 19.99, description: "Descrição do produto E", image: "img001.jpg" },
-  { id: 6, name: "Produto F", price: 29.99, description: "Descrição do produto F", image: "img002.png" },
-  { id: 7, name: "Produto G", price: 39.99, description: "Descrição do produto G", image: "img001.jpg" },
-  { id: 8, name: "Produto H", price: 49.99, description: "Descrição do produto H", image: "img003.png" },
-];
-
-  let cart = [];
-
-  // Exibir produtos na página
-function displayProducts() {
-  const productList = document.getElementById("productList");
-  productList.innerHTML = "";
-  products.forEach(product => {
-    productList.innerHTML += `
-      <div class="col-md-3">
-        <div class="card mb-4">
-          <img src="${product.image}" class="card-img-top" alt="${product.name}">
-          <div class="card-body text-center">
-            <h5 class="card-title">${product.name}</h5>
-            <p class="card-text">${product.description}</p>
-            <p class="text-danger fw-bold">R$${product.price.toFixed(2)}</p>
-            <button class="btn btn-secondary" style="background-color: #d9e0e3;" onclick="addToCart(${product.id})">Adicionar ao Carrinho</button>
-          </div>
-        </div>
-      </div>`;
-  });
-}
-
-  // Adicionar produto ao carrinho
-  function addToCart(productId) {
-    const product = products.find(p => p.id === productId);
-    cart.push(product);
-    alert(`Produto ${product.name} adicionado ao carrinho!`);
-  }
-
-  // Exibir carrinho
-  function viewCart() {
-    const cartContent = document.getElementById("cartContent");
-    if (cart.length === 0) {
-      cartContent.innerHTML = "<p>O carrinho está vazio.</p>";
-    } else {
-      cartContent.innerHTML = "<ul class='list-group'>";
-      cart.forEach((item, index) => {
-        cartContent.innerHTML += `
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            ${item.name} - R$${item.price.toFixed(2)}
-            <button class="btn btn-danger btn-sm" onclick="removeFromCart(${index})">Remover</button>
-          </li>`;
-      });
-      cartContent.innerHTML += "</ul>";
-    }
-    const cartModal = new bootstrap.Modal(document.getElementById("cartModal"));
-    cartModal.show();
-  }
-
-  // Remover item do carrinho
-  function removeFromCart(index) {
-    cart.splice(index, 1);
-    viewCart();
-  }
-
-  // Finalizar compra
-  function checkout() {
-    if (cart.length === 0) {
-      alert("O carrinho está vazio.");
-      return;
-    }
-    alert("Compra realizada com sucesso!");
-    cart = [];
-    viewCart();
-  }
-
-  // Autenticação do login
-  function authenticate() {
-    const username = document.getElementById("username").value;
-    const password = document.getElementById("password").value;
-
-    if (username === "admin" && password === "admin") {
-      alert("Login bem-sucedido!");
-      const loginModal = bootstrap.Modal.getInstance(document.getElementById("loginModal"));
-      loginModal.hide();
-    } else {
-      alert("Usuário ou senha incorretos.");
-    }
-  }
-
-  // Inicializar página
-  document.addEventListener("DOMContentLoaded", displayProducts);
-</script>
-
+  <h1>teste</h1>
 </body>
 </html>
